<resources>
    <string name="app_name">RateDriverApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name :</string>
    <string name="enter_name">Enter your full name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_pass">Enter your password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="user_profile">User profile</string>
    <string name="email">Email :</string>
    <string name="add_car_number">Add your car number</string>
    <string name="rate_driver">Rate the driver</string>
    <string name="example">ex: TM23XYZ</string>
    <string name="total_reviews">Total reviews</string>
    <string name="one_star"> - Very Unsatisfactory - This driver\'s behavior was notably unsafe or inconsiderate.</string>
    <string name="hint">Type your comment here (280 characters max.)</string>
    <string name="stars_deserved">How many stars do they deserve?</string>
    <string name="user_rating">Average stars : </string>
    <string name="submit">Submit</string>
    <string name="rating">Rating bar for user reviews</string>
    <string name="opinion">Leave your opinion down below:</string>
    <string name="car_identity_number">Car Identity Number :</string>
    <string name="guide">Guide to Using Star Ratings </string>
    <string name="useful_info">RateDriverApp is a user-friendly platform designed to empower you to share and gather valuable feedback about your driving experiences. Our app allows each user to rate and review other users\' journeys, playing a vital role in cultivating a safer and more enjoyable driving environment for everyone.</string>
    <string name="about_us">About us</string>
    <string name="back">Back</string>
    <string name="logout">logout</string>
    <string name="account_already">Already have an account? Log In!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="comment">Comment : </string>
    <string name="welcome">Welcome Onboard!</string>
    <string name="given_reviews">Given reviews</string>
    <string name="view_given_reviews">View given reviews</string>
    <string name="driver_profile">Driver profile</string>
    <string name="car_number">City/Number/Letters</string>
    <string name="pages">Pages information</string>
    <string name="stars_table">Stars</string>
    <string name="get_started">GET STARTED!</string>
    <string name="rate">Rate</string>
    <string name="meaning_table">Meaning</string>
    <string name="licence_plate">Enter License Plate Number</string>
    <string name="search">Search</string>
    <string name="emails">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="do_not">Don\'t have an account? Sign Up!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_page">LOGIN - Use your credentials to access RateDriverApp. If you are new, sign up for an account</string>
    <string name="signup_page">SIGNUP - This page helps you create an account using your credentials</string>
    <string name="home_page">HOME - After logging in, you\'ll arrive at the Home page displaying information about your account and also recent reviews</string>
    <string name="search_page">SEARCH - Utilize the Search page to find specific drivers\' profiles and read their ratings and reviews</string>
    <string name="rate_review_page">RATE DRIVER - To rate a driver\'s performance, you have to search for its car identity number and it will be displayed the Review page, where you can select the star rating that aligns with your evaluation and provide a comment</string>
    <string name="title">Welcome to RateDriverApp!</string>
    <string name="stars">In RateDriverApp, star ratings are a fundamental means of expressing your satisfaction with a driving experience. Each star rating signifies a specific sentiment: </string>
    <string name="oneStar">The driver\'s behavior was notably unsafe or inconsiderate</string>
    <string name="twoStars">The driver\'s behavior fell short of expectations, indicating areas for improvement</string>
    <string name="threeStars">The driver\'s behavior was acceptable but did not stand out either positively or negatively</string>
    <string name="fourStars">The driver exhibited good driving practices, with minor room for enhancement</string>
    <string name="fiveStars">The driver demonstrated exemplary skills, contributing to an overall safer road experience</string>
    <string name="star5">5 Stars</string>
    <string name="star4">4 Stars</string>
    <string name="star3">3 Stars</string>
    <string name="star2">2 Stars</string>
    <string name="star1">1 Star</string>
</resources>