<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RateDriverActivity"
    android:background="@color/sand">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="641dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/grape"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/rate_driver"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_identity_number"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_black"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carNumberEditText"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/customed_text"
            android:ems="10"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:maxLength="7"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/stars_deserved"
            android:textSize="20sp"
            android:fontFamily="@font/lato_black"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/customed_text"
            android:layout_marginTop="10dp"
            android:isIndicator="false"
            android:numStars="5"
            android:theme="@style/RatingBar"

            android:stepSize="1"
            android:contentDescription="@string/rating"
            tools:item="@layout/item_review" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/opinion"
            android:textSize="20sp"
            android:fontFamily="@font/lato_black"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/customed_text"
                android:hint="@string/hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="280"
                android:padding="10dp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/rateDriverButton"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/lato_black"
                android:text="@string/submit"
                android:textColor="@color/black"
                app:cornerRadius="30dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>