<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="515dp"
        android:layout_height="589dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-212dp"
        android:layout_marginBottom="242dp"
        android:rotation="-42"
        app:srcCompat="@drawable/circle"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="189dp"
        android:layout_height="184dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-37dp"
        android:layout_marginTop="583dp"
        android:layout_marginEnd="259dp"
        android:layout_marginBottom="-36dp"
        android:rotation="42"
        app:srcCompat="@drawable/circle"/>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="325dp"
        android:layout_height="310dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="-61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="481dp"
        app:srcCompat="@drawable/logo"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="77dp"
        app:cardBackgroundColor="@color/grape"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="524dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/customed_text"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/enter_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/customed_text"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/customed_text"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customed_text"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato"
                android:padding="10dp"
                android:text="@string/add_car_number"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/carNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customed_text"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/car_number"
                android:maxLength="7"
                android:padding="10dp"
                android:inputType="textCapCharacters"/>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/lato_black"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/goToLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:textColor="@color/black"
        android:layout_marginTop="660dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/account_already" />

</RelativeLayout>