<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InfoFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="641dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/grape"
        app:cardCornerRadius="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lato_black"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textaboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/about_us"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:padding="10dp"
                    android:background="@drawable/customed_text"
                    android:id="@+id/textAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/useful_info"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/guide"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/textStar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stars"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customed_text"
                    android:layout_gravity="center">
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stars_table"
                            android:textSize="15sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meaning_table"
                            android:textSize="15sp"
                            android:layout_marginStart="24dp"
                            android:textStyle="bold"/>

                    </TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#5C5C5C" />

                    <TableRow>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_star_rate_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/oneStar"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp"/>
                    </TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#5C5C5C" />

                    <TableRow>
                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/twoStars"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"/>
                    </TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#5C5C5C" />

                    <TableRow>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/threeStars"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp"/>
                    </TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#918E8E" />

                    <TableRow>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fourStars"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp"/>
                    </TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#5C5C5C" />

                    <TableRow>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_star_rate_24"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fiveStars"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:layout_marginStart="16dp"/>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/textPages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textColor="@color/black"
                    android:text="@string/pages"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/textLoginPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_page"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/textSignUpPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_page"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/textHomePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_page"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/textSearchPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_page"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/textReviewPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_review_page"
                    android:textSize="15sp"
                    android:background="@drawable/customed_text"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</FrameLayout>